Fixed Overflow X on Desktop

--- a/index.css
+++ b/index.css
@@ -11,13 +11,12 @@ a {
 }
 
 #rights-container {
-    position: fixed; /* or 'sticky' if applicable */
-    bottom: 0; /* Distance from the bottom of the viewport */
-    left: 50%; /* Position the left edge of the element in the middle of the viewport */
-    transform: translateX(-50%); /* Center the element horizontally */
-    /* Add your preferred width, height, and styling below */
-    text-align: center; /* Example text alignment */
-    width: 100vw;
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+    width: 80%;
 }
 
 #rights-container > p {
@@ -26,7 +25,7 @@ a {
     font-size: 0.6rem;
     /* turn the text to a bit transparent */
     color: rgba(0, 0, 0, 0.5);
-    padding: 0.5rem;
+    padding: 0.5rem 0;
     margin: 0;
     transition: color cubic-bezier(1, 0, 0, 1) 0.2s;
 }
@@ -89,6 +88,11 @@ a {
     height: fit-content;
     min-height: 100vh;
     flex-wrap: wrap;
+}
+
+.landing-wrapper {
+    padding: 0 2.5rem;
+    max-width: calc(100% - 5rem);
 }
 
 .heading-container {
@@ -250,7 +254,7 @@ a {
 
 .offer-wrapper img {
     position: absolute;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     z-index: -1;
     overflow: hidden;
